# msft-hackathon-research-demo

./: README.md  old_style_crew.py
entrepreneur_validation_crew/: README.md  pyproject.toml
entrepreneur_validation_crew/src/entrepreneur_validation_crew/: crew.py  main.py
entrepreneur_validation_crew/src/entrepreneur_validation_crew/config/: agents.yaml  tasks.yaml
