[tool.poetry]
name = "entrepreneur_validation_crew"
version = "0.1.0"
description = "entrepreneur_validation_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
entrepreneur_validation_crew = "entrepreneur_validation_crew.main:run"
run_crew = "entrepreneur_validation_crew.main:run"
train = "entrepreneur_validation_crew.main:train"
replay = "entrepreneur_validation_crew.main:replay"
test = "entrepreneur_validation_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
